syntax = "proto3";

package tvsc.service.radio;

service RadioService {
  rpc echo(EchoRequest) returns (EchoReply);
  rpc list_radios(EmptyRequest) returns (Radios);
}

message EchoRequest {
  string msg = 1;
}

message EchoReply {
  string msg = 1;
}

message EmptyRequest {}

message Radio {
  string name = 1;
}

message Radios {
  repeated Radio radios = 1;
}
